Завершён блок "Разделение на обучающую и тестовую выборки".

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1578,11 +1578,44 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Разделение на обучающую и тестовую выборки",
+   "id": "50f5d7b4b30fff6c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T14:10:22.988002Z",
+     "start_time": "2025-08-13T14:10:22.870584Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "# разделяем факторы и предсказываемую характеристику\n",
+    "X = data.drop(columns='label')\n",
+    "y = data['label']"
+   ],
+   "id": "841959809115b1ac",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "c1ff706bdba045ce"
+   "execution_count": 43
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T14:10:36.125202Z",
+     "start_time": "2025-08-13T14:10:35.993453Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# разделяем данные на обучающую и тестовую выборки\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ],
+   "id": "29f7f06b8595322",
+   "outputs": [],
+   "execution_count": 45
   }
  ],
  "metadata": {
